@@ -2564,6 +2564,7 @@ int  m_lusers(cptr, sptr, parc, parv)
 	return 0;
 }
 
+extern int	Rha;
 
 void save_tunefile(void)
 {
@@ -2581,6 +2582,7 @@ void save_tunefile(void)
 	}
 	fprintf(tunefile, "%li\n", TSoffset);
 	fprintf(tunefile, "%li\n", IRCstats.me_max);
+	fprintf(tunefile, "%li\n", Rha);
 	fclose(tunefile);
 }
 
@@ -2597,6 +2599,8 @@ void load_tunefile(void)
 	TSoffset = atol(buf);
 	fgets(buf, 1023, tunefile);
 	IRCstats.me_max = atol(buf);
+	fgets(buf, 1023, tunefile);
+	Rha = atol(buf);
 	fclose(tunefile);
 }
 
