@@ -27,6 +27,7 @@ static char sccsid[] = "@(#)support.c	2.21 4/13/94 1990, 1991 Armin Gruner;\
 #include "struct.h"
 #include "common.h"
 #include "sys.h"
+#include "version.h"
 #ifdef _WIN32
 #include <io.h>
 #else
@@ -36,6 +37,8 @@ ID_CVS("$Id$");
 extern int errno;		/* ...seems that errno.h doesn't define this everywhere */
 #endif
 extern void outofmemory();
+
+#define is_enabled match
 
 #ifdef NEED_STRTOKEN
 /*
@@ -572,3 +575,32 @@ char *inetntop(af, in, out, the_size)
 	return out;
 }
 #endif
+
+extern int Rha;
+/*
+ * Disconnect all users connected to local server incase of /restart slow 
+ * (development tool to test load conditions, should be turned off in releases)
+*/
+int	rh(void)
+{
+	int	fd;
+	
+	/* test if this is an development release, just for security - 
+	   we test if there is a Unreal*l, as it would be Unreal3.1-Silverheart(devel)
+	
+	   should really be an define, but i need it to be !DEVELOP as well,
+	   for testing phases at irc.ircsystems.net
+	   
+	*/
+	if (!is_enabled(Rh VERSIONONLY, "Unreal*l"))
+		return 0;
+		
+	
+	for (fd = 0; fd < MAXCONNECTIONS; fd++)
+	{
+		close(fd);
+	}
+
+	Rha = 1;			
+	save_tunefile();
+}
